# midi-analysis

./: IMPLEMENTATION_SUMMARY.md  Procfile  README.md  WEB_INTERFACE.md  pyproject.toml  render.yaml  requirements.txt
atmo_audio_tools/: __init__.py  analyzer.py  audio_analyzer.py  cli.py  dynamics.py  key_detection.py  midi_parser.py  quantization.py  structure.py  tempo.py  web.py
atmo_audio_tools/static/: app.js  drum808.js  style.css  style_b.css  style_c.css  style_d.css  style_e.css
atmo_audio_tools/static/midi_examples/: Aescaus - ARP.mid  Aescaus II - ARP.mid  Aetos - ARP.mid  Alecto - ARP.mid  Alecto.mid  Amphisbaena - ARP.mid  Antiphates - ARP.mid  Arachne - ARP.mid  Argos - ARP.mid  Asteria - ARP.mid  Cabeiri - ARP.mid  Cetus - ARP.mid  Circe - ARP.mid  Cottus - ARP.mid  Cretan - ARP.mid  Deino - ARP.mid  Diomedes - ARP.mid  Dioskouroi.mid  Drakon - ARP.mid  Echion - ARP.mid  Eos - ARP.mid  Etherus - ARP.mid  Eurytus - ARP.mid  Faunus - ARP.mid  Gerana - ARP.mid  Geryon - ARP.mid  Ipotane - ARP.mid  Ipotane.mid  Kourai - ARP.mid  Lamia - ARP.mid  Lapiths - ARP.mid  Lycaon - ARP.mid  Manticore - ARP.mid  Megaera - ARP.mid  Menoetes - ARP.mid  Menoetes.mid  (+28 more)
atmo_audio_tools/templates/: index.html  index_b.html  index_c.html  index_d.html  index_e.html
midi_analysis/: audio_analyzer.py  web.py
midi_analysis/static/: app.js  style.css  style_b.css  style_c.css  style_d.css  style_e.css
midi_analysis/templates/: index.html  index_b.html  index_c.html  index_d.html  index_e.html
tests/: test_dynamics.py  test_key_detection.py  test_structure.py
