[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atmo-audio-toolbox"
version = "0.1.0"
description = "Comprehensive audio and MIDI file analysis: key, mode, tempo, dynamics, and more"
requires-python = ">=3.9"
dependencies = [
    "mido>=1.3",
    "numpy>=1.24",
    "click>=8.0",
]

[project.optional-dependencies]
web = ["Flask>=2.0"]

[project.scripts]
atmo-audio-toolbox = "midi_analysis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["midi_analysis*"]
